# SoftwareRenderer

./: .clang-format  .clang-uml  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  TODO.md  thread_pool.c
cmake/: SoftwareRenderer.cmake  format.cmake  module.cmake  test.cmake
cmake/toolchain/: mingw-toolchain.cmake
demo/: CMakeLists.txt  main.c  ui_menu.c  ui_menu.h
demo/resources/: drone.h  helmet.h  monkey.h  teapot.h
demo/script/: obj_to_header.py
docs/uml/: demo_include_map.puml  demo_main_flow.puml
include/renderer/: algebra.h  config.h.in  framebuffer.h  platform.h  renderer.h
platform/: CMakeLists.txt
platform/opengl/: CMakeLists.txt  linux_gl.c
platform/win32/: CMakeLists.txt  win32.c
platform/xlib/: CMakeLists.txt  platform_types.h  xlib.c
script/: obj_to_header.py
src/: algebra.c  algebra.h  arena.c  arena.h  camera.c  camera.h  framebuffer.c  framebuffer.h  main.c  primitive.c  primitive.h  primitives.c  primitives.h  renderer.c  text.c  text.h  thread_pool.c  thread_pool.h  vertex.c  vertex.h
src/platform/: win32.c  x11.c
tests/framework/: CMakeLists.txt  unit_test.c  unit_test.h
